--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -4,10 +4,10 @@ app.name = \u6846\u67B6demo
 app.home = /D/Projects/RunData/demo_home
 app.subsystem = false
 app.staticfile.home = /framework
-aap.local.firstpage = /system/mainframe/index
+app.local.firstpage = /system/mainframe/index
 #\u591A\u56FD\u8BED\u8A00\u8BBE\u7F6E
-aap.local.multiLang= false
-aap.local.defalutLang=zh_CN
+app.local.multiLang= false
+app.local.defalutLang=zh_CN
 
 #\u6570\u636E\u5E93\u8FDE\u63A5\u53C2\u6570\u914D\u7F6E\uFF0C\u540E\u7EED\u7684\u7248\u672C\u4F1A\u628A\u8FD9\u4E2A\u66FF\u6362\u4E3Ajdni\u90A3\u6837\u66F4\u7075\u6D3B\u66F4\u5B89\u5168\uFF0C
 #\u56E0\u4E3A\u4E0D\u8981\u63D0\u4F9B\u5BC6\u7801\uFF0C\u5355\u5143\u914D\u7F6E\u6587\u4EF6\u4E2D\u4E5F\u53EF\u4EE5\u5BF9\u5BC6\u7801\u8FDB\u884C\u52A0\u5BC6\uFF0C\u6682\u65F6\u6CA1\u6709\u505A
