--- a/framework-session-jdbc/pom.xml
+++ b/framework-session-jdbc/pom.xml
@@ -24,8 +24,8 @@
         </dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <scope>provided</scope>
         </dependency>
 
