--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.centit.framework</groupId>
         <artifactId>centit-project-bulid-parent</artifactId>
-        <version>5.4.240119</version>
+        <version>5.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>framework-parent</artifactId>
