--- a/framework-session-jdbc/pom.xml
+++ b/framework-session-jdbc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>framework-parent</artifactId>
         <groupId>com.centit.framework</groupId>
-        <version>${revision}</version>
+        <version>5.4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -26,8 +26,9 @@
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
+
 
         <dependency>
             <groupId>com.oracle</groupId>
