--- a/framework-config/pom.xml
+++ b/framework-config/pom.xml
@@ -44,6 +44,7 @@
             <groupId>org.jasig.cas.client</groupId>
             <artifactId>cas-client-core</artifactId>
         </dependency>
+
         <!--引入h2嵌入式数据库来管理session的持久化问题-->
         <dependency>
             <groupId>org.springframework.session</groupId>
@@ -53,6 +54,8 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <version>2.2.220</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
