--- a/framework-session-core/pom.xml
+++ b/framework-session-core/pom.xml
@@ -27,7 +27,7 @@
 
         <dependency>
             <groupId>com.centit.framework</groupId>
-            <artifactId>framework-config</artifactId>
+            <artifactId>framework-core</artifactId>
             <version>${project.version}</version>
         </dependency>
 
