--- a/framework-config/pom.xml
+++ b/framework-config/pom.xml
@@ -43,6 +43,12 @@
         <dependency>
             <groupId>org.jasig.cas.client</groupId>
             <artifactId>cas-client-core</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>bcpkix-jdk15on</artifactId>
+                    <groupId>org.bouncycastle</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!--引入h2嵌入式数据库来管理session的持久化问题-->
